# mosh-android

./: .gitignore  configure.ac
.github/workflows/: android-jni.yml
android/: .gitignore  README.md  build-android-jni-assets.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android/lib/: build.gradle.kts  consumer-rules.pro
android/lib/src/main/kotlin/org/mosh/: MoshClient.kt  MoshEnvironment.kt  Terminfo.kt
src/frontend/: Makefile.am  mosh-client.cc  mosh_jni.cc
src/util/: locale_utils.cc  pty_compat.cc
